--- a/styles/components/_burger.scss
+++ b/styles/components/_burger.scss
@@ -2,7 +2,7 @@
     position: fixed;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     right: -100%;
     z-index: 100;
     transition: all .3s ease-in-out;
@@ -86,4 +86,8 @@
             right: 0;
         }
     }
+}
+
+.body-noscroll {
+    overflow-y: hidden;
 }
