--- a/styles/components/_burger.scss
+++ b/styles/components/_burger.scss
@@ -6,6 +6,7 @@
     right: -100%;
     z-index: 100;
     transition: all .3s ease-in-out;
+    overflow-y: auto;
 
     &__space {
         position: absolute;
