--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,7 @@
 // Color system
 
+
+$second-color:              #233237 !default;
 $color-white:               #fff !default;
 $color-black:               #000 !default;
 $color-blue:                #5C90AB !default;
