--- a/styles/components/_scheme.scss
+++ b/styles/components/_scheme.scss
@@ -173,7 +173,7 @@
         &__title {
             font-family: $main-font;
             font-size: 25px;
-            font-weight: $font-weight-base;
+            font-weight: $font-weight-bold;
             line-height: 25px;
             color: $color-light-gray;
         }
