--- a/styles/components/_screen.scss
+++ b/styles/components/_screen.scss
@@ -42,7 +42,7 @@
     &__title {
         font-family: $main-font;
         font-size: 90px;
-        font-weight: $font-weight-base;
+        font-weight: $font-weight-bold;
         line-height: 90px;
         color: $color-white;
         margin-top: 350px;
