--- a/styles/components/_section-title.scss
+++ b/styles/components/_section-title.scss
@@ -2,7 +2,7 @@
     position: relative;
     font-family: $main-font;
     font-size: 80px;
-    font-weight: $font-weight-base;
+    font-weight: $font-weight-bold;
     line-height: 80px;
     color: $color-light-gray;
     width: max-content;
