--- a/styles/components/_utp.scss
+++ b/styles/components/_utp.scss
@@ -113,7 +113,7 @@
         justify-content: center;
         align-items: center;
         font-family: $main-font;
-        font-weight: $font-weight-base;
+        font-weight: $font-weight-bold;
         color: $color-dark-blue;
         background: radial-gradient(49.25% 49.25% at 39.51% 29.03%, #FFFFFF 0%, #A2C4D6 100%);
         border-radius: 100%;
