--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,7 @@
 @import "fonts";
 @import "components/scrollbar";
 @import "components/section-title";
+@import "components/page-nav";
 @import "components/header";
 @import "components/burger";
 @import "components/screen";
@@ -13,3 +14,4 @@
 @import "components/album";
 @import "components/news";
 @import "components/footer";
+@import "components/building";
