--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,7 +4,7 @@
 @import "components/scrollbar";
 @import "components/section-title";
 @import "components/page-nav";
-@import "components/header";
+@import "components/header-main";
 @import "components/burger";
 @import "components/screen";
 @import "components/utp";
@@ -14,4 +14,3 @@
 @import "components/album";
 @import "components/news";
 @import "components/footer";
-@import "components/building";
